--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
   </header>
 
+  <div id="menu" class="fas fa-bars"></div>
+
   <script src="https://cdnjs.cloudfare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="js/script.js"></script>
