--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
+        <li><a href="#education">education</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -29,7 +30,76 @@
 
   </header>
 
+  \
+
   <div id="menu" class="fas fa-bars"></div>
+
+
+  <section class="home" id="home">
+    <h3>Hello there</h3>
+    <h1>I am <span>Edwin Aringo</span></h1>
+    <p>A software developer particularly interested in android development</p>
+
+    <a href="#about"><button class="btn">about me<i class="fas fa-user"></i></button></a>
+
+
+  </section>
+
+
+
+  <section class="about" id="about">
+
+    <h1 class="heading"><span>about</span> me </h1>
+    <div class="row">
+      <div class="info">
+        <h3><span>name : </span> Edwin Aringo</h3>
+        <h3><span>age : </span> 21</h3>
+        <h3><span>post : </span> Android Developer</h3>
+        <h3><span>languages : </span> English and kiswahili</h3>
+        <a href="#"><button class="btn">get my CV </button></a>
+      </div>
+    </div>
+  </section>
+
+  <section class="education" id="education">
+    <h1 class="heading">my <span>education</span></h1>
+
+    <div class="box-container">
+      <div class="box">
+        <span>2018</span>
+        <h3>Strathmore University</h3>
+        <p>Cisco networking and Certificate in Computer Applications</p>
+
+      </div>
+      <div class="box">
+        <span>2020</span>
+        <h3>University of Nairobi</h3>
+        <p>Bachelor of Quantity Surveying</p>
+
+      </div>
+      <div class="box">
+        <span>2021</span>
+        <h3>Moringa School</h3>
+        <p>software development -- Android development</p>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="portfolio" id="portfolio">
+    <h1 class="heading">my <span>portfolio</span></h1>
+    <div class="box-container">
+      <div class="box">
+        <img src="images/gitplace.png" alt="">
+      </div>
+      <div class="box">
+        <img src="images/hero_sqwa.png" alt="">
+      </div>
+      <div class="box">
+        <img src="images/pizza.png" alt="">
+      </div>
+    </div>
+  </section>
 
   <script src="https://cdnjs.cloudfare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
