--- a/index.html
+++ b/index.html
@@ -101,6 +101,27 @@
     </div>
   </section>
 
+  <section class="contact" id="contact">
+    <h1 class="heading"><span>contact</span> me </h1>
+    <div class="row">
+      <div class="content">
+        <h3 class="title">contact info</h3>
+        <div class="info">
+          <h3>tedaringo628@gmail.com</h3>
+          <h3>+254-717-346-225</h3>
+          <h3>Nairobi, Kenya</h3>
+        </div>
+      </div>
+      <form action="">
+        <input type="text" placeholder="name" name="" id="" class="box">
+        <input type="email" placeholder="email" name="" id="" class="box">
+        <input type="text" placeholder="project" name="" id="" class="box">
+        <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
+        <button type="submit" class="btn"> send </button>
+      </form>
+    </div>
+  </section>
+
   <script src="https://cdnjs.cloudfare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="js/script.js"></script>
