--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
       <div class="box">
         <img src="images/pizza.png" alt="">
       </div>
+      <div class="box">
+        <img src="images/Screenshot_1629346984.png" alt="">
+      </div>
+      <div class="box">
+        <img src="images/Screenshot_1629347059.png" alt="">
+      </div>
+      <div class="box">
+        <img src="images/Screenshot_1629347090.png" alt="">
+      </div>
     </div>
   </section>
 
@@ -110,6 +119,7 @@
           <h3>tedaringo628@gmail.com</h3>
           <h3>+254-717-346-225</h3>
           <h3>Nairobi, Kenya</h3>
+          <h3> <a href="https://github.com/edwinaringo">My github</a></h3>
         </div>
       </div>
       <form action="">
