Added about section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         <h3><span>age : </span> 21</h3>
         <h3><span>post : </span> Android Developer</h3>
         <h3><span>languages : </span> English and kiswahili</h3>
-        <a href="#"><button class="btn">get my CV </button></a>
+        <p>Asked about my interests, I would narrow it down to my love for cars; driving, fixing cars, reading 
+          about cars and also writing about cars. <a href="https://edwinaringo.wordpress.com"> <span>View my blog</span></a>
+          <br> Aside from English and Kiswahili, I also speak Java and some Javascript.
+        </p>
       </div>
     </div>
   </section>
