Changing education section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h3><span>age : </span> 21</h3>
         <h3><span>post : </span> Android Developer</h3>
         <h3><span>languages : </span> English and kiswahili</h3>
-        <h3><span>skills : </span> Angular, Javascript, Android development, java, firebase, spark, debugging</h3>
+        <h3><span>skills : </span> Angular, Javascript, Android, Java, Firebase, Spark framework, Mysql, PostgreSQL</h3>
 
         <p>Asked about my interests, I would narrow it down to my love for cars; driving, fixing cars, reading 
           about cars and also writing about cars. <a href="https://edwinaringo.wordpress.com"> <span>View my blog</span></a>
@@ -71,21 +71,40 @@
 
     <div class="box-container">
       <div class="box">
-        <span>2018</span>
-        <h3>Strathmore University</h3>
-        <p>Cisco networking and Certificate in Computer Applications</p>
-
-      </div>
-      <div class="box">
-        <span>2020</span>
+        <span>2021-PRESENT</span>
         <h3>University of Nairobi</h3>
-        <p>Bachelor of Quantity Surveying</p>
+        <p>Bachelor of Computer Science</p>
 
       </div>
       <div class="box">
         <span>2021</span>
         <h3>Moringa School</h3>
-        <p>software development -- Android development</p>
+        <p>Software development -- Android development</p>
+
+      </div>
+      <div class="box">
+        <span>2021</span>
+        <h3>Moringa School</h3>
+        <p>Software development -- Web Development</p>
+
+      </div>
+      <div class="box">
+        <span>2018-2020</span>
+        <h3>University of Nairobi</h3>
+        <p>Bachelor of Quantity Surveying</p>
+
+      </div>
+      <div class="box">
+        <span>2018</span>
+        <h3>Strathmore University</h3>
+        <p>Cisco networking and Certificate in Computer Applications</p>
+
+      </div>
+
+      <div class="box">
+        <span>2014-2017</span>
+        <h3>Maranda High School</h3>
+        <p>Kenya Certificate of Secondary Education</p>
 
       </div>
     </div>
@@ -94,24 +113,36 @@
   <section class="portfolio" id="portfolio">
     <h1 class="heading">my <span>portfolio</span></h1>
     <div class="box-container">
+      <a href="laughing-thompson-f9a085.netlify.app">
       <div class="box">
-        <img src="images/gitplace.png" alt="">
+        <img src="images/gitplace.png" alt="" >
       </div>
+    </a>
+      <a href="hero-sqwa.herokuapp.com/">
       <div class="box">
         <img src="images/hero_sqwa.png" alt="">
       </div>
+    </a>
+    <a href="youthful-mcnulty-3bf0f9.netlify.app">
       <div class="box">
         <img src="images/pizza.png" alt="">
       </div>
+      </a>
+      <a href="https://github.com/edwinaringo/movers">
       <div class="box">
         <img src="images/Screenshot_1629346984.png" alt="">
       </div>
+      </a>
+      <a href="https://github.com/edwinaringo/crypto-app-wk4">
       <div class="box">
         <img src="images/Screenshot_1629347059.png" alt="">
       </div>
+      </a>
+      <a href="https://github.com/edwinaringo/Daring-Wallpapers">
       <div class="box">
         <img src="images/Screenshot_1629347090.png" alt="">
       </div>
+      </a>
     </div>
   </section>
 
