Added my fuel app

--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
         <img src="images/Screenshot_1629347090.png" alt="">
       </div>
       </a>
+      <a href="fuelapp.netlify.app">
+        <div class="box">
+          <img src="images/Screenshot from 2021-12-01 10-52-44.png" alt="">
+        </div>
+        </a>
     </div>
   </section>
 
