Changed email to lowercase

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
       <div class="content">
         <h3 class="title">contact info</h3>
         <div class="info">
+          <div class="email">
           <h3>tedaringo628@gmail.com</h3>
+        </div>
           <h3>+254-717-346-225</h3>
           <h3>Nairobi, Kenya</h3>
           <h3> <a href="https://github.com/edwinaringo">My github</a></h3>
