--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3><span>skills : </span> Angular, Javascript, Android, Java, Firebase, Spark framework, Mysql, PostgreSQL</h3>
 
         <p>Asked about my interests, I would narrow it down to my love for cars; driving, fixing cars, reading 
-          about cars and also writing about cars. <a href="https://edwinaringo.wordpress.com"> <span>View my blog</span></a>
+          about cars and also writing about cars. <a href="https://edwinaringo.wordpress.com"> <span>View my blog</span></a>. I am also extremely passionate about the environment and figuring out different ways of saving it.
           <br> Aside from English and Kiswahili, I also speak Java and some Javascript :)
         </p>
       </div>
